--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tremor/react": "3.6.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
